# pomocop

./: .env.sample  .gitignore  Cargo.nix  Cargo.toml  LICENSE-MIT  README.md  flake.nix
src/: lib.rs  main.rs
src/commands/: meta.rs  mod.rs  pomo.rs
src/pomo/: mod.rs  reply.rs  session.rs
src/pomo/reply/: phrases.rs
