[package]
name = "pomocop"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
dotenv = "0.15.0"
hhmmss = "0.1.0"
indoc = "1.0.3"
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
rusqlite = "0.25.3"
tap = "1.0.1"
thiserror = "1.0.28"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
branch = "master"

[dependencies.refinery]
version = "0.6.0"
features = ["rusqlite"]

[dependencies.tokio]
version = "1.11.0"
features = ["rt-multi-thread"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
