[package]
name = "pomocop"
version = "0.1.0"
authors = [ "Søren Mortensen <soren@neros.dev>" ]
edition = "2018"
description = "Pomocop is a Discord tomato timer bot that aims to be robust, while also displaying the signature people-skills common to law enforcement officers, VC-backed techbros and everyone's least favourite teachers."
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
dotenv = "0.15.0"
hhmmss = "0.1.0"
indoc = "1.0.3"
poise = "0.5.5"
rand = "0.8.4"
tap = "1.0.1"
thiserror = "1.0.28"
tracing = "0.1.26"
tracing-subscriber = "0.3.17"

[dependencies.tokio]
version = "1.11.0"
features = ["rt-multi-thread"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]
